Refactor Templatable.py response generation logic
Revised the ask() function to use the generate() method instead of stream_generate(), updated prompt construction for both on-topic and off-topic cases, and improved tokenizer initialization. Also added a new PDF file and updated .gitignore to exclude mistral_prompt.safetensors.

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ fastlane/test_output
 /MLX_Researcher_Swift_Final/MLX_Researcher_Swift_Final/data_activism_classifier
 /MLX_Researcher_Swift_Final/MLX_Researcher_Swift_Final/data_activism_classifier
 /MLX_Researcher_Swift_Final/MLX_Researcher_Swift_Final/data_activism_classifier
+MLX_Researcher_Swift_Final/MLX_Researcher_Swift_Final/mistral_prompt.safetensors
