Add model.safetensors to .gitignore
Ignore the model.safetensors file in the data_activism_classifier directory to prevent it from being tracked by git.

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+MLX_Researcher_Swift_Final/MLX_Researcher_Swift_Final/data_activism_classifier/model.safetensors
